--- a/styleddd copy.css
+++ b/styleddd copy.css
@@ -46,7 +46,7 @@ h1 {
 
 .vcard-container {
   max-width: 1500px;
-  height: 100%;
+  min-height: 450px;
   background: transparent;
   display: grid;
   grid-template-columns: 100px 400px 1fr;
@@ -215,10 +215,9 @@ h1 {
 /* ===== CONTENT ===== */
 .content {
   padding: 40px;
+  /* overflow-y: auto; */
   background-color: #fff;
-  height: 650px;
-  max-width: 1500px;
-  overflow-y: scroll;
+  height: auto;
 }
 
 .section {
@@ -429,7 +428,7 @@ h1 {
 }
 
 .sobre::after {
-  content: " Mim";
+  content: " Min";
   color: #ffb30d;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
@@ -525,13 +524,9 @@ text-align: center;
 
 /* Section Projetos*/
 
-#projetos {
- width: auto;
-}
-
 .galeria {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   margin-top: 30px;
 }
@@ -564,6 +559,8 @@ text-align: center;
 .card-projeto a {
    margin: 15px 0;
 }
+
+
 
 .card-projeto .overlay {
   position: absolute;
@@ -689,14 +686,10 @@ padding: 0 10PX;
 
 /* Section Contato */
 
-#contato {
- width: 35vw;
- overflow: hidden;
-}
-
 .section-contato {
   padding: 60px 20px;
-  background-color: #fff;
+  background-color: #f9f9f9;
+  
 }
 
 .section-contato h1 {
@@ -720,7 +713,7 @@ padding: 0 10PX;
 }
 
 .form-contato {
-  max-width: 350px;
+  max-width: 500px;
   margin: 60px auto 0;
   display: flex;
   flex-direction: column;
@@ -731,9 +724,8 @@ padding: 0 10PX;
 .form-contato textarea {
   padding: 12px;
   border: 1px solid #ccc;
-  border-radius: 6px;
+  border-radius: 8px;
   font-size: 1rem;
-  outline: none;
 }
 
 .form-contato button {
