--- a/responsividade.css
+++ b/responsividade.css
@@ -97,10 +97,12 @@
 
   #contato {
     width: 50vw;
+    max-width: 900px;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
   }
 
   /* #habilidades{
